...
        email: emailFormatado,
        criadoEm: serverTimestamp(),
      };

      await setDoc(doc(db, "users", user.uid), dadosUsuario);

      Alert.alert("Sucesso", "Cadastro realizado com sucesso!");
      goTo("home");
    } catch (error) {
      console.log("Erro ao cadastrar usuário:", error);

      let mensagem = "Não foi possível realizar o cadastro.";

...
