...
        {/* ========================================== */}
        {/* VOLTAR */}
        {/* ========================================== */}

        <View style={styles.bottomButton}>
          <Button
            title="Voltar"
            onPress={() => goTo("homeProfissional")}
            type="secondary"
          />
        </View>
      </View>
    </SafeAreaView>
...
