appId: com.seuapp.faztudo
---


- assertVisible: "Bem-vindo ao FazTudo"

- tapOn: "Esqueceu sua senha?"
- assertVisible: "Recuperar senha"

- tapOn: "Email"
- inputText: "teste.maestro.usuario04@gmail.com"

- tapOn:
    id: "0_resource_name_obfuscated"
    index: 48

- tapOn: "Enviar instruções"

- assertVisible:
    text: "Email enviado"

- tapOn: "OK"

- assertVisible: "Bem-vindo ao FazTudo"