appId: host.exp.exponent
---
# Cenário 1: Deve realizar cadastro de usuário com sucesso
- tapOn: "Cadastrar"
- tapOn: "Sou USUÁRIO"
- tapOn: "Nome completo *"
- inputText: ${name}
- tapOn: "RG *"
- inputText: ${rg}
- tapOn: "CPF *"
- inputText: ${cpf}
- tapOn: "CEP *"
- inputText: 51030380
- tapOn: "Número *"
- inputText: 10
- back
- scrollUntilVisible:
    element: "Cadastrar"
- tapOn: "DDD *"
- inputText: 81
- tapOn: "Telefone *"
- inputText: 999999999
- back
- tapOn: "Email *"
- inputText: ${email}
- back
- tapOn: "Senha *"
- inputText: ${password}
- back
- tapOn: "Confirmar senha *"
- inputText: ${password}
- back
- tapOn: "Cadastrar"
- assertVisible: "Cadastro realizado com sucesso!"
- tapOn: "OK"
