appId: host.exp.exponent
---
# Cenário 2: Botões da página inicial do aplicativo devem redirecionar corretamente
- tapOn: "Esqueceu sua senha?"
- tapOn: "Voltar"
- tapOn: "Entrar"
- assertVisible: "Erro"
- tapOn: "OK"
- tapOn: "Cadastrar"
- assertVisible: "Sou USUÁRIO"
- assertVisible: "Sou AUTÔNOMO"
- tapOn: "Voltar ao LOGIN"
- tapOn: "Entrar com Google"
- assertVisible: "Google Login"
- tapOn: "OK"
