appId: host.exp.exponent
---
# Cenário 1: Deve realizar login com sucesso
- tapOn: "Email"
- inputText: ${email}
- tapOn: "Senha"
- inputText: ${password}
- back
- tapOn: "Entrar"
- assertVisible: "Sucesso"
- tapOn: "OK"
- assertVisible: "Escolha um serviço..."
- tapOn: "Voltar"

