appId: host.exp.exponent
---
# Cenário 1: Login
- tapOn: "Email"
- inputText: "edsoneduardo2@hotmail.com"
- tapOn: "Senha"
- inputText: "Edsoneduard0@"
- tapOn: "Entrar"
- assertVisible: "Sucesso"
- tapOn: "OK"
- assertVisible: "Escolha um serviço..."
- tapOn: "Voltar"

# Cenário 2: Botão "Cadastrar"
- tapOn: "Cadastrar"
- assertVisible: "Sou USUÁRIO"
- assertVisible: "Sou Autônomo"
- tapOn: "Voltar ao LOGIN"